[gd_scene load_steps=2 format=3 uid="uid://coa4keram5y7q"]

[ext_resource type="Script" path="res://scripts/InteractionArea.gd" id="1_npa7f"]

[node name="InteractionArea" type="Area2D"]
script = ExtResource("1_npa7f")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
